<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#ff0000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_out"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="26sp"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_access_time_24"
            android:contentDescription="@string/clock_logo" />
        <Button
            android:id="@+id/tryagain"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_again"/>
        <Button
            android:id="@+id/exitbutton"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>