<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bluewelcome"
    tools:context=".ResultActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/resultback"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/back_button" />

    </RelativeLayout>

    <TextView
        android:id="@+id/resultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/results"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:textSize="25sp"/>


    <TextView
        android:id="@+id/rightquestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:text="@string/questions_right"
        android:textColor="@color/white"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/wrongquestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:layout_marginBottom="50dp"
        android:text="@string/questions_wrong"
        android:textColor="@color/white"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/quizscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:text="@string/score"
        android:layout_gravity="center"/>

</LinearLayout>